<resources>
    <string name="app_name">NavigationArguments</string>
    <string name="hint_title">Titulo</string>
    <string name="hint_producer">Produtora</string>
    <string name="hint_launch">Lançamento</string>
    <string name="hint_gender">Genero</string>
    <string name="hint_platform">Plataforma</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="register">Cadastrar</string>
</resources>